--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #f4f4f4;
+    transition: all 0.3s ease;
 }
 
 .profile-card {
@@ -26,6 +27,7 @@ body {
     padding: 25px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     position: relative;
+    transition: all 0.3s ease;
 }
 
 .profile-card::before {
@@ -37,6 +39,25 @@ body {
     width: 100%;
     border-radius: 24px 24px 0 0;
     background-color: #4070f4;
+}
+
+#themeToggle {
+    position: absolute;
+    align-self: flex-end;
+    color: #4070f4;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 24px;
+    margin: 0 10px;
+    padding: 8px 8px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#themeToggle:hover {
+    background-color: #0e4bf1;
 }
 
 .image {
